Modularized Java code. #49 Upgraded from Nashorn to GraalVM.js.